@@ -89,6 +89,8 @@ Changes from txLoadBalancer 1.0.1 to 1.1.0
   (without the need to run a separate load-balancingn daemon).
 - Added support for live interaction with load-balancer via SSH connection to
   running Python interpretter (Twisted manhole).
+- The ability to start listening on a new port without restaring the
+  application.
 
 Changes from txLoadBalancer 0.9.1 to 1.0.1
 
