@@ -7,6 +7,7 @@ Bugs
 
 Placeholders
 ------------
+ * running config page needs an overhaul (currently broken)
  * add a tool for generating a password (bin script that calls util functions)
  * can nextHost() get unburried? How "close" can we bring it to the receiver
    factory?
